kubernetes/kubernetes 1.5/config/1-5-1-multitool_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitool-backend
  labels:
    app: multitool-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multitool-backend

  template:
    metadata:
      labels:
        app: multitool-backend
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
