kubernetes/kubernetes 1.5/config/1-5-1-back_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  ports:
  - name: multitool
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: multitool-backend
