kubernetes/kubernetes 1.5/config/1-5-1-front_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-frontend
